# code_graveyard

bender_arm/: package.xml
bender_arm/include/bender_arm/: grab_object.h
bender_arm/include/bender_planning_old/: IKNode.h  Matrix.h  QueryTimer.h  brazo.h  distbrazo.h  hMatrix.h  punto.h
bender_arm/include/torque_brazo/: right_torque.h  torque.h
bender_arm/install/files/: base_arm.rules  left_arm.rules
bender_arm/launch/: a_bottom_right_start.launch  complete_Larm.launch  macros.launch  start_right_arm_controller.launch
bender_arm/src/: IKNode_viejo.cpp  Main_right.cpp  QueryTimer.cpp  baseArm_Controller.cpp  baseArm_Controller2.cpp  bottom_arm_controller_interface.cpp  iknode_(estable_compliant).cpp  iknode_estable_con_servicio).cpp  left_cinematica.cpp  left_planner.cpp  prueba.cpp  right_arm_controller_interface.cpp
bender_arm/test_src/: macro_services.cpp
bender_behaviors/: CMakeLists.txt  package.xml  setup.py
bender_behaviors/bash/: start_rips.bash  start_roscore.bash
bender_behaviors/config/: rviz_chest.rviz
bender_behaviors/include/: MacroPerson.h
bender_behaviors/launch/: rviz_chest.launch
bender_behaviors/launch/old/: cocktail.launch  discurso_final.launch  entrevista.launch  festival.launch  follow.launch  follow_test.launch  kinect_follow.launch  laser_follow.launch  navega_vision.launch  osorno_ceremonia.launch  osorno_demo_caras.launch  osorno_demo_nav.launch  osorno_easy_face.launch  speech_nav.launch  speech_nav_red.launch  test.launch
bender_behaviors/src/: MacroPerson.cpp  visual_speech_manip.cpp  visual_speech_manip_(estable).cpp
bender_behaviors/src/Old_Robocup/: Demo.py
bender_behaviors/src/python_old/: OPEN.py  Osorno.py  Osorno_Talk.py  cleanUp.py  cleanUp_v0.py  cocktail.py  cocktail_test.py  demo_caras.py  desafio_tecnologico.py  discurso_final.py  easy_face.py  entrance.py  entrance_rips.py  entrevista1.py  follow.py  follow2.py  grab_objects.py  interaccion.py  interaction_test.py  kinect_voice_follow.py  osorno_nav.py  speech_nav_test.py  stop_button.py  test0.py  test1.py  testbrazo.py  utem.py  video_crowdfunding.py  voice_cocktail.py
bender_follow_me/: package.xml
bender_follow_me/config/: ni_detector.yaml
bender_follow_me/config/openni/: SamplesConfig.xml
bender_follow_me/include/bender_follow_me/: BaseController.hpp  LaserModel.hpp
bender_follow_me/launch/: follow_me.launch  laser_front_inverter.launch  ni_detector.launch  tracker.launch
bender_follow_me/msg/: HOGdetection.msg  SingleBodyDetection.msg  TrackingState.msg
bender_follow_me/src/: BaseController.cpp  BayesianFilter.cpp  follow_sm.py
bender_listen/: .gitignore  CMakeLists.txt  package.xml
bender_listen/Grammar/voice_cmd/: voice_cmd.fsg  voice_cmd.jsgf
bender_sensors/: CMakeLists.txt
bender_vision/src/nite/: CMakeLists.txt
complete_pkgs/bender_arm/: CMakeLists.txt
complete_pkgs/bender_arm/config/: bottom_arm_controller.yaml  left_arm_controller.yaml  right_arm_controller.yaml
complete_pkgs/bender_arm/include/: macros.h
complete_pkgs/bender_arm/install/: install.sh
complete_pkgs/bender_arm/launch/: bottomArmSim.launch  complete_Rarm.launch  complete_arms.launch  start_bottom_arm_controller.launch  start_left_arm_controller.launch
complete_pkgs/bender_arm/src/: IKNode.cpp  IKNode_v.cpp  Main_left.cpp  OMNode.cpp  bottom_arm_service_interface.cpp  fknode.cpp  hMatrix.cpp  iknode_(estable_con_set_goal).cpp  iknode_(estable_sin_servicio).cpp  l_interface_plan_arm.cpp  left_arm_controller_interface.cpp  r_interface_plan_arm.cpp  right_cinematica.cpp  right_planner.cpp  state_publisher.cpp
complete_pkgs/bender_arm/test_src/: baseArm_Controller_modified.cpp
complete_pkgs/bender_follow_me/: CMakeLists.txt
complete_pkgs/bender_follow_me/config/: follow_me.rviz
complete_pkgs/bender_follow_me/launch/: base_controller.launch
complete_pkgs/bender_follow_me/msg/: BodyDetections.msg
complete_pkgs/bender_follow_me/src/: NIdetector.cpp
complete_pkgs/bender_gui_launch/: CMakeLists.txt  package.xml  setup.py
complete_pkgs/bender_gui_launch/ui/: rc_launch.ui
complete_pkgs/bender_macros/: CMakeLists.txt  package.xml  setup.py
complete_pkgs/bender_macros/config/: SearchFace.yaml  SearchWaving.yaml
complete_pkgs/bender_macros/include/: EnrollPerson.h  Person.h  SearchFace.h  SearchWaving.h
complete_pkgs/bender_macros/launch/: person_blocking_detector.launch  search_waving.launch  test_ApproachToTable.launch  test_BringObject.launch  test_EnrollFaces.launch  test_LookForEmergency.launch  test_LookForSomeFace.launch  test_SearchFace.launch  test_SearchWaving.launch
complete_pkgs/bender_macros/src/: EnrollFace.cpp  EnrollPerson.cpp  Person.cpp  PersonBlockingDetector.cpp  SearchFace.cpp  SearchWaving.cpp
complete_pkgs/mp_tracker/: dtracker_debug_live.py  dtracker_debug_live_threaded.py  package.xml  plot_paths.py  rgbd.yaml
complete_pkgs/mp_tracker/include/: cluster.h  connected_voxel.h  d_tracker.h  depth_connected_components.h  depth_connected_components.hpp  gaussian_process.hpp  gb_tracker.h  map.h  plane_filter.hpp
complete_pkgs/mp_tracker/launch/: base_jpda.launch  crowdeded_bag_play.launch  demo.launch  (+7 more)
mp_tracker/: CMakeLists.txt  dtracker_debug.py  dtracker_debug_dump.py  plot.py  show_all.py
mp_tracker/include/: compressed_features.h  d_tracker.hpp  d_tracker_mjs.h  d_tracker_mjs.hpp  gb_tracker.hpp  matrix.h  matrix.hpp  mp_tracker.h  mp_tracker.hpp  munkres.h  munkres.hpp  person.h  plane_filter.h  pointcloud_process.h  unscented_sampler.hpp  util.h  utilities.h
mp_tracker/launch/: .mine_vision.launch.swp  base_nn.launch  mine_beta_visual.launch  simple.world  square.pgm  square.yaml
mp_tracker/scripts/: error_plot.py  evaluator.py  evaluator_depth.py  run_tests.py
mp_tracker/src/: .d_tracker_plus_node.cpp.swp  connected_voxel.cpp  d_tracker.cpp  d_tracker_calibration_node.cpp  d_tracker_plus_kinect_node.cpp  d_tracker_plus_kinect_node_for_rgbdpeopledataset.cpp  d_tracker_plus_visual_node.cpp  d_tracker_vision_node.cpp  map.cpp  mp_tracker.cpp  mp_tracker_node.cpp  pointcloud_process.cpp
(+307 files in other folders)
