<?xml version="1.0"?>
<package>
  <name>bender_arm</name>
  <version>0.0.0</version>
  <description>The bender_arm package</description>
  <maintainer email="matias@todo.todo">matias</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bender_msgs</build_depend>
  <build_depend>bender_srvs</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>bender_msgs</run_depend>
  <run_depend>bender_srvs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>