<?xml version="1.0"?>
<package>
  <name>bender_listen</name>
  <version>0.0.0</version>
  <description>The bender_listen package</description>
  <maintainer email="growolff@die.uchile.cl">gonzalo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bender_msgs</build_depend>
  <build_depend>bender_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>bender_config</build_depend>
  
  <run_depend>bender_config</run_depend>
  <run_depend>bender_msgs</run_depend>
  <run_depend>bender_srvs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>


  <!-- rosdep name="gstreamer_pocketsphinx"/ -->


  <export>

  </export>
</package>