<?xml version="1.0"?>
<package>
  <name>bender_gui_launch</name>
  <version>0.1.0</version>
  <description>

     GUI for controlling Bender

  </description>

  <!-- team -->
  <maintainer email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</maintainer>
  <author     email="bender.devel@gmail.com">
    Bender Team - UChile Homebreakers</author>

  <!-- specific developers -->
  <maintainer email="growolff@gmail.com">Gonzalo Olave</maintainer>
  <author>Gonzalo Olave</author>

  <!-- about bender and related repository -->
  <url type="website">bender.li2.uchile.cl</url>
  <url type="bugtracker">
    https://bitbucket.org/uchile-robotics-die/bender_tools/issues</url>
  <url type="repository">
    https://bitbucket.org/uchile-robotics-die/bender_tools</url>

  <license>TODO</license>

  <!-- catkin -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS -->
  <build_depend>rospy</build_depend>
  <build_depend>bender_msgs</build_depend>
  <build_depend>bender_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>bender_msgs</run_depend>
  <run_depend>bender_srvs</run_depend>  
  <run_depend>std_msgs</run_depend>
  
  
</package>
