<?xml version="1.0"?>
<package>
  <name>bender_macros</name>
  <version>0.0.0</version>
  <description>The bender_macros package</description>
  <maintainer email="matias@todo.todo">matias</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>bender_msgs</build_depend>
  <build_depend>bender_srvs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>bender_msgs</run_depend>
  <run_depend>bender_srvs</run_depend>

  <export>
  </export>
</package>