<?xml version="1.0"?>
<package>
  <name>mp_tracker</name>
  <version>0.0.0</version>
  <description>The mp_tracker package</description>
  <maintainer email="luz@todo.todo">luz</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>bender_srvs</build_depend>
  <build_depend>bender_msgs</build_depend>
  
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>bender_srvs</run_depend>
  <run_depend>bender_msgs</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags    ="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ld_tracker" />
  </export>
</package>
